feat(frontend): add startup splash screen with progress bar, module feedback, disable option & tests (IMP-03–06)
- Implemented SplashWidget (image + text + progress)
- Connected to boot sequence & module load callback
- Added --disable-startup-splash CLI & config guard
- Localized strings
- Added progress model unit tests + manual checklist

windows-x64 build & full startup verification passed.
Closes IMP-03, IMP-04, IMP-05, IMP-06

--- a/frontend/data/locale/en-US.ini
+++ b/frontend/data/locale/en-US.ini
@@ -1,6 +1,10 @@
 # Note to translators: *DO NOT* translate this file directly. Instead, visit http://crowdin.com/project/obs-studio and submit your translations there.
 # Pull requests for translations outside of Crowdin will not be accepted.
 # Read this forum post for more instructions on submitting translations: https://obsproject.com/forum/threads/how-to-contribute-translations-for-obs.16327/
+# Modifications Copyright (C) 2026 Uniflow, Inc.
+# Author: Kim Taehyung <gaiaengine@gmail.com>
+# Modified: 2026-02-12
+# Notes: Changes for Syndy Creator Studio.
 
 # Language of this file
 Language="English"
@@ -187,6 +191,46 @@ Paste.Filters="Paste Filters"
 # browser initialization dialog
 BrowserPanelInit.Title="Initializing Browser..."
 BrowserPanelInit.Text="Initializing browser, please wait..."
+
+# startup splash
+Startup.Splash.Status.StartingUp="Starting up"
+Startup.Splash.Status.StartingApplication="Starting application"
+Startup.Splash.Status.InitializingApplication="Initializing application"
+Startup.Splash.Status.InitializingOBSCore="Initializing OBS core"
+Startup.Splash.Status.DiscoveringModules="Discovering modules"
+Startup.Splash.Status.LoadingModules="Loading modules"
+Startup.Splash.Status.ModulesLoaded="Modules loaded"
+Startup.Splash.Status.LoadingModule="Loading module"
+Startup.Splash.Status.LoadedModule="Loaded module"
+Startup.Splash.Status.SkippedModule="Skipped module"
+Startup.Splash.Status.FailedModule="Failed module"
+Startup.Splash.Status.InitializingServices="Initializing services"
+Startup.Splash.Status.LoadingSceneCollection="Loading scene collection"
+Startup.Splash.Status.PreparingMainWindow="Preparing main window"
+Startup.Splash.Status.StartupComplete="Startup complete"
+Startup.Splash.Step.Default="Stage"
+Startup.Splash.Step.Startup="Startup"
+Startup.Splash.Step.Boot="Boot"
+Startup.Splash.Step.AppInit="AppInit"
+Startup.Splash.Step.OBSInit="OBSInit"
+Startup.Splash.Step.ModuleScan="ModuleScan"
+Startup.Splash.Step.ModuleLoad="ModuleLoad"
+Startup.Splash.Step.Services="Services"
+Startup.Splash.Step.Scenes="Scenes"
+Startup.Splash.Step.UI="UI"
+Startup.Splash.Step.Ready="Ready"
+Startup.Splash.ModuleLabel="Module: %1"
+Startup.Splash.ModuleLabel.None="Module: -"
+Startup.Splash.Reason.NotOBSPlugin="not an OBS plugin"
+Startup.Splash.Reason.NotSafeModule="blocked by safe mode"
+Startup.Splash.Reason.DisabledModule="disabled"
+Startup.Splash.Reason.MissingExports="missing exports"
+Startup.Splash.Reason.FailedToOpen="failed to open"
+Startup.Splash.Reason.GenericError="generic error"
+Startup.Splash.Reason.IncompatibleVersion="incompatible version"
+Startup.Splash.Reason.HardcodedSkip="hardcoded skip"
+Startup.Splash.Reason.FailedToInitialize="failed to initialize"
+Startup.Splash.Reason.Unknown="unknown"
 
 # bandwidth test
 BandwidthTest.Region="Region"
