feat: add preview dialog to 3D scene source

--- a/frontend/data/locale/en-US.ini
+++ b/frontend/data/locale/en-US.ini
@@ -724,6 +724,7 @@ Basic.PropertiesView.UrlButton.OpenUrl="Open URL"
 
 # interaction window
 Basic.InteractionWindow="Interacting with '%1'"
+Basic.InteractionWindow.Hint="MMB drag: Orbit | Shift + MMB drag: Pan | Ctrl/Cmd + MMB drag: Dolly (Zoom) | Mouse Wheel: Zoom | R: Reset Camera"
 
 # status bar
 Basic.StatusBar.Reconnecting="Disconnected, reconnecting in %2 second(s) (attempt %1)"
