feat: add multi-mesh gltf/glb rendering

--- a/plugins/vspace-source/data/locale/en-US.ini
+++ b/plugins/vspace-source/data/locale/en-US.ini
@@ -16,11 +16,11 @@
 ;     along with this program.  If not, see <http://www.gnu.org/licenses/>.
 ; ******************************************************************************/
 
-Model3DSource="3D Scene"
-Scene3D.ModelFile="Model File"
-Scene3D.ModelFile.Filter="glTF 2.0 Files (*.glb *.gltf);;GLB Files (*.glb);;glTF Files (*.gltf)"
-Scene3D.Draco.Enable="Enable Draco Decompression"
-Scene3D.Draco.Decoder="Draco Decoder"
-Scene3D.Draco.Decoder.Auto="Auto"
-Scene3D.Draco.Decoder.Builtin="Built-in"
-Scene3D.Draco.Decoder.External="External (Not Implemented)"
+Model3DSource="VSpace"
+Vspace.ModelFile="Model File"
+Vspace.ModelFile.Filter="glTF 2.0 Files (*.glb *.gltf);;GLB Files (*.glb);;glTF Files (*.gltf)"
+Vspace.Draco.Enable="Enable Draco Decompression"
+Vspace.Draco.Decoder="Draco Decoder"
+Vspace.Draco.Decoder.Auto="Auto"
+Vspace.Draco.Decoder.Builtin="Built-in"
+Vspace.Draco.Decoder.External="External (Not Implemented)"
