--- a/plugins/vspace-source/data/locale/en-US.ini
+++ b/plugins/vspace-source/data/locale/en-US.ini
@@ -19,6 +19,7 @@
 Model3DSource="VSpace"
 Vspace.ModelFile="Model File"
 Vspace.ModelFile.Filter="glTF 2.0 Files (*.glb *.gltf);;GLB Files (*.glb);;glTF Files (*.gltf)"
+Vspace.BackgroundColor="Background Color"
 Vspace.Draco.Enable="Enable Draco Decompression"
 Vspace.Draco.Decoder="Draco Decoder"
 Vspace.Draco.Decoder.Auto="Auto"
